# changelog-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: code_quality.yml  unit_tests.yml
changelog_pre_commit/: cli_messages.py  cli_options.py  core.py  services.py  utils.py
tests/: test_changelog_pre_commit.py  test_services.py  test_utils.py
