[tool.poetry]
name = "changelog-pre-commit"
version = "0.3.0"
description = "Don't you ever forget to update your Changelog when doing a push/commit"
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "changelog_pre_commit.core:run"
